# neochess

./: .env  README.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: rust.yml
backend/: .env  Cargo.toml  Dockerfile  diesel.toml
backend/src/: main.rs  outbound.rs
backend/src/domain/game/: models.rs  ports.rs  service.rs
backend/src/domain/game/models/: errors.rs  fen.rs  game.rs  move_stat.rs  new_game.rs  pgn.rs  position.rs
backend/src/domain/platform/: models.rs  ports.rs  service.rs
backend/src/inbound/: graphql.rs  http.rs
backend/src/inbound/graphql/: dto.rs  game_update_cache.rs  mutation.rs  query.rs  subscription.rs
backend/src/inbound/http/: handlers.rs
backend/src/outbound/: fen_validator.rs  join_set_limited.rs  platforms.rs  position_visitor.rs  postgres.rs
backend/src/outbound/postgres/: dto.rs  schema.rs
backend/src/outbound/postgres/migrations/: 20250805190014_create_game.up.sql  20250805190021_create_position.up.sql  20250805190025_create_game_position.down.sql  20250805190025_create_game_position.up.sql  20250813154751_change_game_position_indices.down.sql  20250813154751_change_game_position_indices.up.sql
backend/src/outbound/postgres/migrations/2025-07-21-214059_create_game/: up.sql
backend/src/outbound/postgres/migrations/2025-07-21-214218_create_game_position/: up.sql
frontend/: Dockerfile  eslint.config.mjs  package.json  rsbuild.config.ts
frontend/src/: App.tsx  apolloClient.ts  constants.ts  graphql.ts  index.tsx  system.ts
frontend/src/__generated__/: gql.ts  graphql.ts
frontend/src/components/: LogoTitle.tsx  Root.tsx
frontend/src/contexts/: ParamsContext.ts
frontend/src/css/: index.js
frontend/src/hooks/: useMoveStats.ts
frontend/src/icons/: BlackKing.tsx  BlackKnight.tsx  CrossIcon.tsx  SwapIcon.tsx  WhiteBishop.tsx  WhiteKing.tsx  WhiteKnight.tsx  WhiteQueen.tsx  WhiteRook.tsx
src/: App.tsx  common.ts  index.tsx  removeGaps.css  scroller.css  system.ts
src/components/: Board.tsx  Move.tsx  MoveStatistics.tsx  Moves.tsx  PositionAnalyzer.tsx  PositionInfo.tsx  Root.tsx  Statistic.tsx
src/hooks/: useDraggable.tsx
src/icons/: BlackBishop.tsx  BlackKnight.tsx  BlackPawn.tsx  BlackQueen.tsx  BlackRook.tsx  LeftArrowIcon.tsx  WhitePawn.tsx
src/store/: analyzer.ts  game.ts
(+34 files in other folders)
