[package]
name = "neochess"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
diesel = { version = "2.2.12", features=["postgres_backend", "postgres", "uuid", "r2d2"] }
juniper = "0.16.2"
juniper_actix = "0.6.0"
pgn-reader = "0.28.0"
shakmaty = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = "1.46.1"
uuid = "1.17.0"
