[package]
name = "neochess"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
diesel = { version = "2.2.12", features = [
    "postgres_backend",
    "postgres",
    "uuid",
    "r2d2",
] }
juniper = { version = "0.16.2", features = ["uuid"] }
juniper_actix = "0.6.0"
pgn-reader = "0.28.0"
r2d2 = "0.8.10"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
shakmaty = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = "1.17.0"
