[package]
name = "neochess"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
juniper = { version = "0.16.2", features = ["uuid"] }
juniper_actix = { version = "0.6.0", features = ["subscriptions"] }
pgn-reader = "0.28.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
shakmaty = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
rayon = "1.10.0"
pgcopy = { version = "0.0.2", features = ["all"] }
juniper_subscriptions = "0.17.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-ws"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
